# blockscout-rs-neti

./: .gitignore  README.md
golem-base-indexer/: Cargo.toml  Dockerfile  README.md  fix-migrations.sh  justfile
golem-base-indexer/.github/workflows/: golem-base-indexer.yml
golem-base-indexer/golem-base-indexer-cli/: Cargo.toml  docker-compose.yml
golem-base-indexer/golem-base-indexer-cli/src/: main.rs  perf_test.rs
golem-base-indexer/golem-base-indexer-entity/: Cargo.toml
golem-base-indexer/golem-base-indexer-entity/src/: blocks.rs  golem_base_block_stats.rs  golem_base_entities.rs  golem_base_entity_history.rs  golem_base_entity_locks.rs  golem_base_numeric_annotations.rs  golem_base_operations.rs  golem_base_pending_logs_events.rs  golem_base_pending_logs_operations.rs  golem_base_pending_transaction_cleanups.rs  golem_base_pending_transaction_operations.rs  golem_base_string_annotations.rs  lib.rs  logs.rs  prelude.rs  sea_orm_active_enums.rs  transactions.rs
golem-base-indexer/golem-base-indexer-logic/: Cargo.toml
golem-base-indexer/golem-base-indexer-logic/src/: annotations.rs  arkiv.rs  attributes.rs  consensus_tx.rs  golem_base.rs  lib.rs  mat_view_scheduler.rs  operations.rs  pagination.rs  types.rs  updater_leaderboards.rs  updater_timeseries.rs  well_known.rs
golem-base-indexer/golem-base-indexer-migration/: Cargo.toml
golem-base-indexer/golem-base-indexer-migration/src/: lib.rs  m20220101_000001_create_table.rs  m20250723_214557_reorgs.rs  m20250802_103147_annotations_pk_fix.rs  m20250805_100925_create_entity_state_history_view.rs  m20250807_143733_annotations_pk_fix2.rs  m20250811_084027_annotations_pk_fix3.rs  m20250811_091505_operations_reference_blocks.rs  m20250812_100925_create_entity_state_history_view.rs  m20250818_181205_nullable_entity_owner.rs  m20250827_115015_fix_tracking_expirations_in_view.rs  m20250904_082310_add_golem_base_events_abi.rs  m20250909_062255_create_golem_base_timeseries.rs  m20250909_062255_create_mview_timeseries_data_usage.rs  m20250915_140948_optimize_history_view.rs  m20250919_080000_update_indexer_queue_trigger.rs  m20250920_085525_history_as_table.rs  m20250922_081148_create_mview_leaderboard_biggest_spenders.rs  m20250922_110337_create_mview_leaderboard_entities_owned.rs  m20250922_112804_create_mview_leaderboard_data_owned.rs  m20250922_112933_create_mview_leaderboard_largest_entities.rs  m20250922_113500_create_mview_leaderboard_effectively_largest_entities.rs  m20250922_113754_create_mview_leaderboard_entities_created.rs  m20250923_081124_create_entity_data_size_histogram_matview.rs  m20250923_150237_process_txs_in_order.rs  m20250925_082126_process_expiration_logs_separately.rs  m20250925_125411_create_mview_timeseries_storage_forecast.rs  m20250926_110921_create_matview_output_indexes.rs  m20250926_121733_create_mview_leaderboard_top_accounts.rs  m20250929_100022_create_storage_forecast_matview_output_indexes.rs  m20251002_101024_cleanup_processed_logs_from_queueu.rs  m20251003_112845_create_mview_timeseries_operations_count.rs  m20251010_082748_create_mview_timeseries_operations_count_by_type.rs  m20251016_085731_migrate_logs_queue.rs  m20251021_091030_cleanup_noop_txs_from_tx_queue.rs  m20251024_100000_create_mview_timeseries_entity_count.rs  m20251027_104916_create_mview_timeseries_block_gas_used_and_limit.rs  m20251111_170928_v2.rs  m20251112_143226_add_change_owner.rs  m20251112_173714_add_constraint_golem_base_operations_check3.rs  (+9 more)
golem-base-indexer/golem-base-indexer-perf-test/: Cargo.toml
golem-base-indexer/golem-base-indexer-proto/: Cargo.toml  build.rs
golem-base-indexer/golem-base-indexer-proto/src/: lib.rs
golem-base-indexer/golem-base-indexer-server/: Cargo.toml
golem-base-indexer/golem-base-indexer-server/src/: indexer.rs  lib.rs  main.rs  mat_view_scheduler.rs  proto.rs  server.rs  settings.rs
golem-base-indexer/golem-base-indexer-server/tests/: address_leaderboard_ranks.rs  block_stats.rs  chart_data_usage.rs  expired_entities_annotations_get_deactivated.rs  expired_entities_dont_get_updated.rs  get_address_stats_endpoint_works.rs  get_entity_data_size_histogram.rs  get_entity_endpoint_works.rs  get_entity_history_endpoint_works.rs  get_entity_operation_endpoint.rs  get_entity_with_timestamp_overflow.rs  get_operation_endpoint.rs  get_operations_count_endpoint_works.rs  inactive_annotations_are_ignored.rs  leaderboard_biggest_spenders.rs  leaderboard_data_owned.rs  leaderboard_entities_by_btl.rs  leaderboard_entities_created.rs  leaderboard_entities_owned.rs  leaderboard_largest_entities.rs  list_addresses_by_data_owned.rs  list_addresses_by_entities_created.rs  list_addresses_by_entities_owned.rs  list_biggest_spenders_endpoint.rs  list_custom_contract_transactions.rs  list_effectively_largest_entities_endpoint.rs  list_entities_by_btl_endpoint.rs  list_entities_endpoint_works.rs  list_largest_entities_endpoint.rs  list_operations_endpoint_works.rs  logic_works.rs  multiple_annotations_per_entity_work.rs  non_unique_annotations_work.rs  queue_cleaned_correctly.rs  related_annotations_work.rs  reorg_handled_correctly_create.rs  reorg_handled_correctly_delete_extend.rs  reorg_handled_correctly_extend_delete.rs  reorg_handled_correctly_update.rs  startup_works.rs
golem-base-indexer/types/: package-lock.json  package.json
golem-base-tools/: Cargo.toml
golem-base-tools/crates/arkiv-storage-tx/: Cargo.toml
golem-base-tools/crates/gen-test-data/: Cargo.toml
golem-base-tools/crates/storage-tx-parser/: Cargo.toml
golem-base-tools/crates/test-converter/: Cargo.toml
optimism-children-indexer/optimism-children-indexer-cli/: Cargo.toml
optimism-children-indexer/optimism-children-indexer-cli/src/: main.rs
optimism-children-indexer/optimism-children-indexer-l3/: Cargo.toml
optimism-children-indexer/optimism-children-indexer-l3/src/: abi.rs  extractors.rs  (+4 more)
optimism-children-indexer/optimism-children-indexer-logic/: Cargo.toml
optimism-children-indexer/optimism-children-indexer-proto/: Cargo.toml  build.rs
optimism-children-indexer/optimism-children-indexer-server/: Cargo.toml
(+222 files in other folders)
