[package]
name = "golem-base-indexer-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
arkiv-storage-tx = { path = "../../golem-base-tools/crates/arkiv-storage-tx" }
blockscout-service-launcher = { workspace = true, features = ["database-1"] }
clap.workspace = true
futures.workspace = true
golem-base-indexer-logic = { path = "../golem-base-indexer-logic", features = [
  "test-utils",
] }
golem-base-indexer-migration = { version = "0.1.0", path = "../golem-base-indexer-migration" }
sea-orm.workspace = true
tokio.workspace = true
