[package]
name = "golem-base-indexer-logic"
version = "0.1.0"
edition = "2021"


[dependencies]
golem-base-indexer-entity = { path = "../golem-base-indexer-entity" }
sea-orm = { workspace = true, features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
  "postgres-array",
] }
anyhow.workspace = true
blockscout-display-bytes.workspace = true
tracing.workspace = true
alloy-primitives.workspace = true
futures.workspace = true
serde.workspace = true
serde_with.workspace = true
golem-base-sdk.workspace = true
alloy-rlp.workspace = true
alloy-sol-types.workspace = true
tokio.workspace = true

[dev-dependencies]
blockscout-service-launcher = { workspace = true, features = [
  "test-database",
  "database-1",
] }
pretty_assertions.workspace = true
golem-base-indexer-migration = { path = "../golem-base-indexer-migration" }
