[package]
name = "golem-base-indexer-logic"
version = "0.1.0"
edition = "2021"


[dependencies]
alloy-primitives.workspace = true
alloy-rlp.workspace = true
alloy-sol-types.workspace = true
anyhow.workspace = true
blockscout-display-bytes.workspace = true
chrono.workspace = true
futures.workspace = true
golem-base-indexer-entity = { path = "../golem-base-indexer-entity" }
golem-base-sdk.workspace = true
lazy_static.workspace = true
prometheus.workspace = true
sea-orm = { workspace = true, features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
  "postgres-array",
] }
serde.workspace = true
serde_with.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
blockscout-service-launcher = { workspace = true, features = [
  "test-database",
  "database-1",
] }
pretty_assertions.workspace = true
golem-base-indexer-migration = { path = "../golem-base-indexer-migration" }
