[package]
name = "golem-base-indexer-server"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web.workspace = true
anyhow.workspace = true
async-trait.workspace = true
blockscout-service-launcher = { workspace = true, features = ["database-1"] }
bytes.workspace = true
config.workspace = true
golem-base-indexer-logic = { path = "../golem-base-indexer-logic" }
golem-base-indexer-migration = { path = "../golem-base-indexer-migration" }
golem-base-indexer-proto = { path = "../golem-base-indexer-proto" }
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true


[dev-dependencies]
blockscout-service-launcher = { workspace = true, features = [
  "test-server",
  "test-database",
] }
pretty_assertions.workspace = true
reqwest.workspace = true
