[package]
name = "optimism-children-indexer-l3"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy.workspace = true
anyhow.workspace = true
chrono.workspace = true
op-alloy.workspace = true
optimism-children-indexer-entity = { path = "../optimism-children-indexer-entity" }
optimism-children-indexer-logic = { path = "../optimism-children-indexer-logic" }
sea-orm = { workspace = true, features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
  "postgres-array",
] }
tokio.workspace = true
tower.workspace = true
tracing.workspace = true
