[package]
name = "optimism-children-indexer-server"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web.workspace = true
anyhow.workspace = true
async-trait.workspace = true
blockscout-service-launcher = { workspace = true, features = ["database-1"] }
blockscout-endpoint-swagger.workspace = true
bytes.workspace = true
optimism-children-indexer-l3 = { path = "../optimism-children-indexer-l3" }
optimism-children-indexer-logic = { path = "../optimism-children-indexer-logic" }
optimism-children-indexer-proto = { path = "../optimism-children-indexer-proto" }
optimism-children-indexer-migration = { path = "../optimism-children-indexer-migration" }
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
chrono.workspace = true
reqwest.workspace = true

[dev-dependencies]
blockscout-service-launcher = { workspace = true, features = [
  "test-server",
  "test-database",
] }
reqwest.workspace = true
pretty_assertions.workspace = true
alloy-primitives.workspace = true
