[package]
name = "gen-test-data"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
alloy-rlp.workspace = true
arkiv-storage-tx = { path = "../arkiv-storage-tx" }
color-eyre.workspace = true
pico-args.workspace = true
