[package]
name = "storage-tx-parser"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
alloy-rlp.workspace = true
color-eyre.workspace = true
golem-base-sdk.workspace = true
pico-args.workspace = true
hex.workspace = true
